# hello-iris

./: .gitignore  README.md  pyproject.toml
hello-iris-java/: pom.xml
hello-iris-java/src/main/java/org/monarchinitiative/exomiser/helloiris/: HelloIrisApplication.java  OnnxScorer.java
hello-iris-java/src/test/java/org/monarchinitiative/exomiser/helloiris/: HelloIrisApplicationTests.java
hello-iris-python/hello_iris/: hello_iris.py
hello_iris/: hello.py  hello_iris.py
models/: logreg-iris.onnx  rf-iris.onnx
